--- a/part9/partd/patientor/tsconfig.json
+++ b/part9/partd/patientor/tsconfig.json
@@ -19,7 +19,9 @@
     "jsx": "react-jsx",
     "downlevelIteration": true,
     "allowJs": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false
+
   },
   "include": [
     "src"
